--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="EcoVision - A Sustainable Future" />
+    <!-- Google tag (gtag.js) -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-HT1RPJHCL5"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-HT1RPJHCL5');
+      </script>
 
     <!-- Favicon and Icons -->
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
