--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,15 @@
 
         gtag('config', 'G-HT1RPJHCL5');
       </script>
+      <!--microsoft clarity code -->
+      <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "r4hcnjgidl");
+</script>
+
 
     <!-- Favicon and Icons -->
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
